--- a/mandelbulber2/formula/ui/transf_box_wrap4d.ui
+++ b/mandelbulber2/formula/ui/transf_box_wrap4d.ui
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transf_box_wrap4d</class>
+ <class>Form</class>
  <widget class="QWidget" name="Form">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>909</width>
-    <height>1098</height>
+    <height>1626</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,21 +59,27 @@
       </widget>
      </item>
      <item row="3" column="3">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledz">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledBz_false">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="text">
         <string notr="true">z.z</string>
        </property>
       </widget>
      </item>
      <item row="3" column="4">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledw">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledCx_false">
        <property name="text">
         <string notr="true">z.w</string>
        </property>
       </widget>
      </item>
      <item row="3" column="2">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledy">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledBy_false">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="text">
         <string notr="true">z.y</string>
        </property>
@@ -92,6 +101,9 @@
      </item>
      <item row="4" column="2">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledy_false">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string notr="true">abs z.y</string>
        </property>
@@ -99,6 +111,9 @@
      </item>
      <item row="4" column="3">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledz_false">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string notr="true">abs z.z</string>
        </property>
@@ -106,6 +121,9 @@
      </item>
      <item row="4" column="4">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledw_false">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string notr="true">abs z.w</string>
        </property>
@@ -120,6 +138,9 @@
      </property>
      <item row="6" column="2">
       <widget class="MyDoubleSpinBox" name="spinbox4_transf_offset_1111_w">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -148,6 +169,9 @@
      </item>
      <item row="4" column="2">
       <widget class="MyDoubleSpinBox" name="spinbox4_transf_offset_1111_y">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -204,6 +228,9 @@
      </item>
      <item row="5" column="2">
       <widget class="MyDoubleSpinBox" name="spinbox4_transf_offset_1111_z">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -433,45 +460,38 @@
      <property name="spacing">
       <number>2</number>
      </property>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_73">
-       <property name="text">
-        <string>test</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx_false">
-       <property name="text">
-        <string notr="true">z.x</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="2">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy_false">
-       <property name="text">
-        <string notr="true">z.y</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="3">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
-       <property name="text">
-        <string notr="true">z.z</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="4">
+     <item row="3" column="4">
       <widget class="MyCheckBox" name="checkBox_transf_function_enabledAw_false">
        <property name="text">
         <string notr="true">z.w</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
+     <item row="3" column="0">
       <widget class="QLabel" name="label_74">
        <property name="text">
-        <string>sign</string>
+        <string>sign of oldZ</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="3">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
+       <property name="text">
+        <string notr="true">z.z</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx_false">
+       <property name="text">
+        <string notr="true">z.x</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="2">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy_false">
+       <property name="text">
+        <string notr="true">z.y</string>
        </property>
       </widget>
      </item>
@@ -627,25 +647,25 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MyGroupBox</class>
    <extends>QGroupBox</extends>
    <header>my_group_box.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>MySpinBox</class>
-   <extends>QSpinBox</extends>
-   <header>my_spin_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MyCheckBox</class>
    <extends>QCheckBox</extends>
    <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MySpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>my_spin_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
@@ -674,7 +694,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>checkBox_transf_function_enabledy</sender>
+   <sender>checkBox_transf_function_enabledBy_false</sender>
    <signal>toggled(bool)</signal>
    <receiver>spinbox4_transf_offset_1111_y</receiver>
    <slot>setEnabled(bool)</slot>
@@ -690,7 +710,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>checkBox_transf_function_enabledz</sender>
+   <sender>checkBox_transf_function_enabledBz_false</sender>
    <signal>toggled(bool)</signal>
    <receiver>spinbox4_transf_offset_1111_z</receiver>
    <slot>setEnabled(bool)</slot>
@@ -706,7 +726,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>checkBox_transf_function_enabledw</sender>
+   <sender>checkBox_transf_function_enabledCx_false</sender>
    <signal>toggled(bool)</signal>
    <receiver>spinbox4_transf_offset_1111_w</receiver>
    <slot>setEnabled(bool)</slot>
@@ -738,7 +758,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>checkBox_transf_function_enabledy</sender>
+   <sender>checkBox_transf_function_enabledBy_false</sender>
    <signal>toggled(bool)</signal>
    <receiver>checkBox_transf_function_enabledy_false</receiver>
    <slot>setEnabled(bool)</slot>
@@ -754,7 +774,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>checkBox_transf_function_enabledz</sender>
+   <sender>checkBox_transf_function_enabledBz_false</sender>
    <signal>toggled(bool)</signal>
    <receiver>checkBox_transf_function_enabledz_false</receiver>
    <slot>setEnabled(bool)</slot>
@@ -770,7 +790,7 @@
    </hints>
   </connection>
   <connection>
-   <sender>checkBox_transf_function_enabledw</sender>
+   <sender>checkBox_transf_function_enabledCx_false</sender>
    <signal>toggled(bool)</signal>
    <receiver>checkBox_transf_function_enabledw_false</receiver>
    <slot>setEnabled(bool)</slot>
