--- a/mandelbulber2/formula/ui/testing_par.ui
+++ b/mandelbulber2/formula/ui/testing_par.ui
@@ -37,7 +37,7 @@
      <property name="checkable">
       <bool>false</bool>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_39" stretch="0,0,0,0,0,0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_39" stretch="0,0,0,0,0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -56,7 +56,7 @@
       <item>
        <widget class="QLabel" name="label_256">
         <property name="text">
-         <string>z = z^4 + z^3 + z^2 + z + c</string>
+         <string>asin_atan2,   z = z^4 + z^3 + z^2 + z + c</string>
         </property>
        </widget>
       </item>
@@ -92,21 +92,21 @@
            <property name="verticalSpacing">
             <number>2</number>
            </property>
-           <item row="2" column="0">
+           <item row="3" column="0">
             <widget class="MyCheckBox" name="checkBox_transf_function_enabledAz_false">
              <property name="text">
               <string notr="true">abs(z.z)</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="3">
+           <item row="1" column="3">
             <widget class="QLabel" name="label_250">
              <property name="text">
               <string>Stop at iteration:</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="2">
+           <item row="2" column="2">
             <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_Y">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -119,35 +119,35 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
+           <item row="1" column="1">
             <widget class="QLabel" name="label_251">
              <property name="text">
               <string>Start at iteration:</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
+           <item row="1" column="0">
             <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx_false">
              <property name="text">
               <string notr="true">abs(z.x)</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="3">
+           <item row="3" column="3">
             <widget class="QLabel" name="label_255">
              <property name="text">
               <string>Stop at iteration:</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
+           <item row="2" column="0">
             <widget class="MyCheckBox" name="checkBox_transf_function_enabledAy_false">
              <property name="text">
               <string notr="true">abs(z.y)</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="4">
+           <item row="1" column="4">
             <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_X">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -160,7 +160,7 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="2">
+           <item row="3" column="2">
             <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_Z">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -173,21 +173,21 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
+           <item row="2" column="1">
             <widget class="QLabel" name="label_252">
              <property name="text">
               <string>Start at iteration:</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
+           <item row="3" column="1">
             <widget class="QLabel" name="label_253">
              <property name="text">
               <string>Start at iteration:</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="4">
+           <item row="2" column="4">
             <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_Y">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -200,14 +200,14 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="3">
+           <item row="2" column="3">
             <widget class="QLabel" name="label_254">
              <property name="text">
               <string>Stop at iteration:</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="4">
+           <item row="3" column="4">
             <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_Z">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -220,7 +220,7 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="2">
+           <item row="1" column="2">
             <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_X">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -239,35 +239,154 @@
        </widget>
       </item>
       <item>
-       <widget class="MyCheckBox" name="checkBox_transf_function_enabledx">
-        <property name="text">
-         <string>Pow1</string>
+       <layout class="QGridLayout" name="gridLayout_80" columnstretch="0,1">
+        <property name="spacing">
+         <number>2</number>
         </property>
-       </widget>
+        <item row="4" column="1">
+         <widget class="MyDoubleSpinBox" name="spinbox4_transf_offset_1111_z">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="prefix">
+           <string/>
+          </property>
+          <property name="suffix">
+           <string/>
+          </property>
+          <property name="decimals">
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-36000.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>36000.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledz">
+          <property name="text">
+           <string>Pwr 3</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0" rowspan="2">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledy">
+          <property name="text">
+           <string>Pwr 2</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1" rowspan="3">
+         <widget class="MyDoubleSpinBox" name="spinbox4_transf_offset_1111_x">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="prefix">
+           <string/>
+          </property>
+          <property name="suffix">
+           <string/>
+          </property>
+          <property name="decimals">
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-99.998999999999995</double>
+          </property>
+          <property name="maximum">
+           <double>99.998999999999995</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledw">
+          <property name="text">
+           <string>Pwr 4</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="MyDoubleSpinBox" name="spinbox4_transf_offset_1111_y">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="prefix">
+           <string/>
+          </property>
+          <property name="suffix">
+           <string/>
+          </property>
+          <property name="decimals">
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-99.998999999999995</double>
+          </property>
+          <property name="maximum">
+           <double>99.998999999999995</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="MyDoubleSpinBox" name="spinbox4_transf_offset_1111_w">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="prefix">
+           <string/>
+          </property>
+          <property name="suffix">
+           <string/>
+          </property>
+          <property name="decimals">
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-36000.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>36000.000000000000000</double>
+          </property>
+          <property name="singleStep">
+           <double>0.100000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledx">
+          <property name="text">
+           <string>Pwr 1</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
       <item>
-       <widget class="MyCheckBox" name="checkBox_transf_function_enabledy">
-        <property name="text">
-         <string>Pow2</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="MyCheckBox" name="checkBox_transf_function_enabledz">
-        <property name="text">
-         <string>Pow3</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="MyCheckBox" name="checkBox_transf_function_enabledw">
-        <property name="text">
-         <string>Pow4</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <layout class="QGridLayout" name="gridLayout_76" columnstretch="0,0">
+       <layout class="QGridLayout" name="gridLayout_76" columnstretch="0,1">
         <property name="spacing">
          <number>2</number>
         </property>
@@ -314,7 +433,7 @@
          </widget>
         </item>
         <item row="3" column="1">
-         <widget class="MyDoubleSpinBox" name="spinbox_beta_angle_offset">
+         <widget class="MyDoubleSpinBox" name="spinboxd_beta_angle_offset">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
@@ -349,7 +468,7 @@
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="MyDoubleSpinBox" name="spinbox_alpha_angle_offset">
+         <widget class="MyDoubleSpinBox" name="spinboxd_alpha_angle_offset">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
@@ -414,31 +533,31 @@
        </layout>
       </item>
       <item>
-       <layout class="QGridLayout" name="gridLayout_78">
+       <widget class="Line" name="line_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QGridLayout" name="gridLayout_78" columnstretch="0,1">
         <property name="topMargin">
          <number>5</number>
         </property>
         <property name="verticalSpacing">
          <number>2</number>
         </property>
-        <item row="1" column="0">
+        <item row="0" column="0" rowspan="2">
          <widget class="QLabel" name="label_122">
           <property name="text">
            <string>Polar to Cartesian</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
+        <item row="0" column="1" rowspan="2">
          <widget class="MyCheckBox" name="checkBox_transf_function_enabledx_false">
           <property name="text">
            <string>Enable twist</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0">
-         <widget class="Line" name="line_2">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
           </property>
          </widget>
         </item>
@@ -727,16 +846,6 @@
        </property>
        <property name="singleStep">
         <double>0.100000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QFrame" name="frame">
-       <property name="frameShape">
-        <enum>QFrame::StyledPanel</enum>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Raised</enum>
        </property>
       </widget>
      </item>
@@ -1493,8 +1602,8 @@
   <tabstop>spinboxInt_transf_stop_iterations_Z</tabstop>
   <tabstop>spinbox_transf_scaleA_1</tabstop>
   <tabstop>spinbox_transf_scaleB_1</tabstop>
-  <tabstop>spinbox_alpha_angle_offset</tabstop>
-  <tabstop>spinbox_beta_angle_offset</tabstop>
+  <tabstop>spinboxd_alpha_angle_offset</tabstop>
+  <tabstop>spinboxd_beta_angle_offset</tabstop>
   <tabstop>groupCheck_transf_function_enabledK_false</tabstop>
   <tabstop>checkBox_transf_function_enabledD_false</tabstop>
   <tabstop>spinboxInt_transf_start_iterations_D</tabstop>
@@ -1520,5 +1629,70 @@
   <tabstop>groupCheck_info</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>checkBox_transf_function_enabledx</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinbox4_transf_offset_1111_x</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>30</x>
+     <y>170</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>163</x>
+     <y>181</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledy</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinbox4_transf_offset_1111_y</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>23</x>
+     <y>197</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>179</x>
+     <y>206</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledz</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinbox4_transf_offset_1111_z</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>47</x>
+     <y>230</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>184</x>
+     <y>234</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBox_transf_function_enabledw</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>spinbox4_transf_offset_1111_w</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>16</x>
+     <y>253</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>162</x>
+     <y>259</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
